<resources>
    <string name="app_name">Android Quiz App</string>
    <string name="welcome_text">Below you can see all currently available quizzes at Udacitys School of Android Development.</string>
    <string name="choose_a_quiz">Choose a quiz:</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="logo_description">Udacity, School of Android Development, Quizz App</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="number_of_questions">Number of questions:</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="quiz_summary">Quiz Summary</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="start_over">Start Over</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="no_wrong_answers">There are no wrong answers</string>
</resources>
