<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.example.myschoolquiz.QuizSummaryActivity">

    <LinearLayout
        android:id="@+id/QuizSummary_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        android:paddingBottom="@dimen/single_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            style="@style/textView_centered_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_summary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

            />

        <TextView
            android:id="@+id/QuizSummary_quizResults_TextView"
            style="@style/textView_centered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answers"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <TextView
        android:id="@+id/QuizSummary_wrongAnswers_TextView"
        style="@style/textView_centered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answers"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuizSummary_heading"
        />

    <View
        android:id="@+id/QuizSummary_topDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/single_margin"
        android:background="@color/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuizSummary_wrongAnswers_TextView"
        />


    <ListView
        android:id="@+id/QuizSummary_wrongAnswers_LinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/QuizSummary_startOverBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuizSummary_topDivider"/>

    <Button
        android:id="@+id/QuizSummary_startOverBtn"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_margin"
        android:onClick="onStartOverClick"
        android:text="@string/start_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/QuizSummary_wrongAnswers_LinearLayout"
        />


</android.support.constraint.ConstraintLayout>
